--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,16 @@
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
   integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
-  crossorigin="anonymous"
-/>
-   <link rel="stylesheet" href="style.css">
+  crossorigin="anonymous"/>
+   <link rel="stylesheet" href="style.css"> 
+
+
+   <link rel="stylesheet" href="https://unpkg.com/primeicons/primeicons.css" />
+    <link rel="stylesheet" href="https://unpkg.com/primereact/resources/themes/lara-light-indigo/theme.css" />
+    <link rel="stylesheet" href="https://unpkg.com/primereact/resources/primereact.min.css" />
+    <link rel="stylesheet" href="https://unpkg.com/primeflex@2.0.0/primeflex.min.css" />
+
+
     <title>React App</title>
   </head>
   <body>
@@ -27,6 +34,20 @@
 
 <script
   src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js"
-  crossorigin></script>
+  crossorigin>
+</script> 
 
+
+<script src="https://unpkg.com/react/umd/react.production.min.js"></script>
+<script src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"></script>
+<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+<script src="https://unpkg.com/react-transition-group@4.4.2/dist/react-transition-group.js"></script>
+
+<!-- Demo -->
+<script src="https://unpkg.com/primereact/core/core.min.js"></script>
+<script src="https://unpkg.com/primereact/slider/slider.min.js"></script>
+
+
+<script src="https://unpkg.com/primereact/primereact.all.min.js"></script>
+  
 </html>
